<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="image_for_list">Image for list</string>
    <string name="title">Título</string>
    <string name="description">Descripción:</string>
    <string name="genre">Género:</string>
    <string name="year">Año:</string>
    <string name="scroll_up">Scrool Up</string>
    <string name="definition">Definition:</string>
    <string name="review">Review:</string>
    <string name="recommendations">Recomendaciones:</string>
</resources>
